# spmd-dialect

./: .gitignore  CLAUDE.md  CMakeLists.txt  LLVM_VERSION  README.md
benchmark/cpp/halide/: CMakeLists.txt  jacobi_2d.cpp
benchmark/cpp/kokkos/: CMakeLists.txt  characterization_all.cpp  hydro_refactored.cpp  hydro_swe.cpp  hydro_swe_fp32.cpp  hydro_swe_swap.cpp  jacobi_2d.cpp  kokkos_notransfer.cpp  reduction.cpp
benchmark/cpp/kokkos/build-reg128/: CMakeCache.txt  Makefile  cmake_install.cmake  jacobi_2d_kokkos
benchmark/cpp/kokkos/build-reg128/cmake_packages/Kokkos/: KokkosConfigCommon.cmake  KokkosTargets.cmake
benchmark/cpp/kokkos/build-reg128/kokkos/: CTestTestfile.cmake  DartConfiguration.tcl  KokkosTargets.cmake  Makefile  cmake_install.cmake
benchmark/cpp/kokkos/build-reg128/kokkos/algorithms/: CTestTestfile.cmake  Makefile  cmake_install.cmake
benchmark/cpp/kokkos/build-reg128/kokkos/benchmarks/: CTestTestfile.cmake  Makefile
benchmark/cpp/kokkos/build-reg128/kokkos/containers/: CTestTestfile.cmake  Makefile  cmake_install.cmake
benchmark/cpp/kokkos/build-reg128/kokkos/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
benchmark/cpp/kokkos/build-reg128/kokkos/example/: CTestTestfile.cmake  Makefile
benchmark/cpp/kokkos/build-reg128/kokkos/simd/: CTestTestfile.cmake  Makefile  cmake_install.cmake
benchmark/cpp/kokkos/build-reg128/kokkos/temp/: KokkosCore_Config_SetupBackend.hpp.work
benchmark/cpp/kokkos/build-reg32/: CMakeCache.txt  Makefile  cmake_install.cmake  git-state.txt  jacobi_2d_kokkos
benchmark/cpp/kokkos/build-reg32/cmake_packages/Kokkos/: KokkosConfig.cmake  KokkosTargets.cmake
benchmark/cpp/kokkos/build-reg32/kokkos/: CTestTestfile.cmake  DartConfiguration.tcl  KokkosConfigVersion.cmake  KokkosCore_Config_DeclareBackend.hpp  KokkosCore_Config_FwdBackend.hpp  KokkosTargets.cmake  Makefile  cmake_install.cmake
benchmark/cpp/kokkos/build-reg32/kokkos/algorithms/: CTestTestfile.cmake  Makefile  cmake_install.cmake
benchmark/cpp/kokkos/build-reg32/kokkos/benchmarks/: CTestTestfile.cmake  Makefile
benchmark/cpp/kokkos/build-reg32/kokkos/containers/: CTestTestfile.cmake  Makefile  cmake_install.cmake
benchmark/cpp/kokkos/build-reg32/kokkos/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake
benchmark/cpp/kokkos/build-reg32/kokkos/example/: CTestTestfile.cmake  Makefile
benchmark/cpp/kokkos/build-reg32/kokkos/simd/: CTestTestfile.cmake  Makefile  cmake_install.cmake
benchmark/cpp/kokkos/build-reg32/kokkos/temp/: KokkosCore_Config_FwdBackend.hpp.work  (+1 more)
benchmark/cpp/kokkos/build-reg48/: CMakeCache.txt  Makefile  cmake_install.cmake  jacobi_2d_kokkos
benchmark/cpp/kokkos/build-reg48/kokkos/: CTestTestfile.cmake  DartConfiguration.tcl  KokkosCore_Config_SetupBackend.hpp  KokkosCore_config.h  KokkosTargets.cmake  Makefile  cmake_install.cmake
benchmark/cpp/kokkos/build-reg64/: CMakeCache.txt  Makefile  cmake_install.cmake  hydro_swe_swap  jacobi_2d_kokkos
benchmark/cpp/kokkos/build-reg64/kokkos/: CTestTestfile.cmake  DartConfiguration.tcl  KokkosTargets.cmake  Makefile  cmake_install.cmake
docs/: plan-gpu.md  (+24 more)
tools/spmd-opt/: CMakeLists.txt  spmd-opt.cpp
(+454 files in other folders)
